--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@mui/x-charts": "^6.18.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.1",
     "clsx": "^2.0.0",
+    "mysql2": "^3.6.5",
     "next": "14.0.4",
     "next-cloudinary": "^5.16.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
